<resources>
    <string name="app_name">management</string>
    <string name="string">FULL NAME</string>
    <string name="enter_username">Enter username</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register">Register</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="login">login</string>
    <string name="EMP">WELCOME TO EMPLOYMENT MANAGEMENT APP</string>
    <string name="ok">Ok</string>
    <string name="employee_details">Employee Details</string>
    <string name="departments">Departments</string>
    <string name="project">Projects</string>
</resources>
