<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".signup_form"
    tools:ignore="PrivateResource">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop="5dp"
        android:textColorHint="@color/colorAccent"
       >

        <EditText
            android:id="@+id/tfname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/string"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="22sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/colorAccent"
        android:layout_marginTop="5dp"
        >

        <EditText
            android:id="@+id/tfuname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_username"
            android:ems="10"
            android:inputType="text"
            android:textSize="22sp"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/colorAccent"
        android:layout_marginTop="5dp"
        >

        <EditText
            android:id="@+id/tfemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:ems="10"
            android:inputType="text"
            android:textSize="22sp"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/colorAccent"
        android:layout_marginTop="5dp"
        >

        <EditText
            android:id="@+id/tfpass1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:ems="10"
            android:inputType="text"
            android:textSize="22sp"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextPassword11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/colorAccent"
        android:layout_marginTop="5dp"
        >

        <EditText
            android:id="@+id/tfpass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_confirm_password"
            android:ems="10"
            android:inputType="text"
            android:textSize="22sp"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="20sp"
            />


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:layout_marginStart="10dp" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:layout_marginStart="10dp" />


        </RadioGroup>
        <Button
            android:id="@+id/Blogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="22sp"
            android:textColor="#ffffff"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_rounded"
            android:onClick="onsignup_formClick"
            />




</LinearLayout>